# sortex

./: .editorconfig  .env.example.dev  .env.example.prod  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  app.py  app.spec  build.bat  build.sh  pyproject.toml  requirements.dev.txt
.github/workflows/: ci.yml
src/configs/: default_config.py
src/constants/: messages.py
src/models/: file_organizer_model.py
src/services/: file_service.py
src/ui/: interface_app.py  styles.py
src/ui/components/: action_buttons.py  extensions_selector.py  filters_selector.py  path_selector.py
src/ui/views/: main_view.py
src/utils/: error_handler.py  tkinter_exception_hook.py
test/: conftest.py
test/test_configs/: test_default_config.py  test_logger_config.py
test/test_constants/: test_messages.py
test/test_models/: test_file_organizer_model.py
test/test_services/: test_file_service.py
test/test_ui/: test_interface_app.py  test_styles.py
test/test_ui/test_components/: test_action_buttons.py  test_extensions_selector.py  test_filters_selector.py  test_path_selector.py
test/test_ui/test_views/: test_main_view.py
test/test_utils/: test_error_handler.py
tests/test_configs/: test_default_config.py  test_development_config.py  test_logger_config.py  test_production_config.py  test_testing_config.py
tests/test_constants/: test_messages.py
tests/test_models/: test_file_organizer_model.py
tests/test_services/: test_file_service.py
tests/test_ui/: test_interface_app.py  test_styles.py
tests/test_ui/test_components/: test_action_buttons.py  test_extensions_selector.py  test_filters_selector.py  test_path_selector.py
tests/test_ui/test_views/: test_main_view.py
tests/test_utils/: test_dialogs.py  test_error_handler.py  test_tkinter_exception_hook.py
